@@ -16,19 +16,23 @@
 
 package com.echothree.control.user.selector.server.command;
 
+import com.echothree.control.user.accounting.common.form.GetGlAccountTypesForm;
 import com.echothree.control.user.selector.common.form.GetSelectorKindsForm;
 import com.echothree.control.user.selector.common.result.SelectorResultFactory;
 import com.echothree.control.user.selector.common.result.GetSelectorKindsResult;
+import com.echothree.model.control.accounting.server.control.AccountingControl;
 import com.echothree.model.control.selector.server.control.SelectorControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.accounting.server.entity.GlAccountType;
 import com.echothree.model.data.selector.server.entity.SelectorKind;
 import com.echothree.model.data.selector.server.factory.SelectorKindFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
@@ -39,26 +43,37 @@ import java.util.Collections;
 import java.util.List;
 
 public class GetSelectorKindsCommand
-        extends BaseMultipleEntitiesCommand<SelectorKind, GetSelectorKindsForm> {
+        extends BasePaginatedMultipleEntitiesCommand<SelectorKind, GetSelectorKindsForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SelectorKind.name(), SecurityRoles.List.name())
-                )))
-        )));
-
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetSelectorKindsCommand */
     public GetSelectorKindsCommand(UserVisitPK userVisitPK, GetSelectorKindsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var selectorControl = Session.getModelController(SelectorControl.class);
+
+        return selectorControl.countSelectorKinds();
     }
 
     @Override
@@ -70,14 +85,17 @@ public class GetSelectorKindsCommand
 
     @Override
     protected BaseResult getResult(Collection<SelectorKind> entities) {
-        GetSelectorKindsResult result = SelectorResultFactory.getGetSelectorKindsResult();
-        var selectorControl = Session.getModelController(SelectorControl.class);
+        var result = SelectorResultFactory.getGetSelectorKindsResult();
 
-        if(session.hasLimit(SelectorKindFactory.class)) {
-            result.setSelectorKindCount(selectorControl.countSelectorKinds());
+        if(entities != null) {
+            var selectorControl = Session.getModelController(SelectorControl.class);
+
+            if(session.hasLimit(SelectorKindFactory.class)) {
+                result.setSelectorKindCount(getTotalEntities());
+            }
+
+            result.setSelectorKinds(selectorControl.getSelectorKindTransfers(getUserVisit(), entities));
         }
-
-        result.setSelectorKinds(selectorControl.getSelectorKindTransfers(getUserVisit(), entities));
 
         return result;
     }
